add_subdirectory(AccumulatePass)
add_subdirectory(BlitPass)
add_subdirectory(BSDFViewer)
add_subdirectory(DebugPasses)
add_subdirectory(DLSSPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(FLIPPass)
add_subdirectory(GBuffer)
add_subdirectory(ImageLoader)
add_subdirectory(ModulateIllumination)
add_subdirectory(OptixDenoiser)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RenderPassTemplate)
add_subdirectory(RTXDIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(SimplePostFX)
add_subdirectory(SVGFPass)
add_subdirectory(TAA)
add_subdirectory(TestPasses)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(PLTPT)
